--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                     @if (User.Identity!.IsAuthenticated)
                     {
                         <li class="nav-item">
+                            <a href="/posts/list" class="nav-link">Posts</a>
+                        </li>
+                        <li class="nav-item">
                             <a href="#" class="nav-link">@User.Identity.Name</a>
                         </li>
                         <li class="nav-item">
@@ -39,6 +42,9 @@
                     {
                         <li class="nav-item">
                             <a href="/users/login" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/users/register" class="nav-link">Register</a>
                         </li>
                     }
                     
