--- a/BlogApp/Views/_ViewImports.cshtml
+++ b/BlogApp/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using BlogApp.Models
 @using BlogApp.Entity
 @using BlogApp.ViewComponents
+@using System.Security.Claims;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
