--- a/BlogApp/Views/Posts/Edit.cshtml
+++ b/BlogApp/Views/Posts/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model PostCreateViewModel
 
+<form method="post">
 <div class="row">
-	<div class="col-12">
+	<div class="col-9">
 		<div class="bg-white p-4">
-			<form method="post">
 				<h2>Create Post</h2>
 				<div asp-validation-summary="All" class="text-danger"></div>
 				<input type="hidden" asp-for="PostId">
@@ -38,10 +38,29 @@
 						<span asp-validation-for="IsActive" class="text-danger"></span>
 					</div>
 				}
-				
 
-					<button type="submit" class="btn btn-primary">Update Post</button>
-			</form>
+
+				<button type="submit" class="btn btn-primary">Update Post</button>
+		</div>
+	</div>
+	<div class="col-3">
+		<div class="bg-white p-4">
+			@foreach(var tag in ViewBag.Tags)
+			{
+				<div class="form-check">
+					<input class="form-check-input" 
+					type="checkbox" 
+					id="tag_@tag.TagId"
+					name="tagIds"
+					value="@tag.TagId"
+						@(Model.Tags.Any(i => i.TagId == tag.TagId) ? "checked" : "")
+					/>
+					<label class="form-check-label" for="tag_@tag.TagId">
+						@tag.Text
+					</label>
+				</div>
+			}
 		</div>
 	</div>
 </div>
+</form>
