--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a href="/posts/list" class="nav-link">Posts</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">@User.Identity.Name</a>
+                            <a asp-controller="Users" asp-action="Profile" asp-route-username="@User.Identity.Name" class="nav-link">@User.Identity.Name</a>
                         </li>
                         <li class="nav-item">
                             <a href="/users/logout" class="nav-link">Logout</a>
